--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -17,10 +17,10 @@ http {
 	server_tokens off;
 
 	server {
-		listen <%= ENV["PORT"] %>;
+		listen 80 %>;
 
 		location / {
-			proxy_pass <%= ENV["UPSTREAM_SERVER"] %>;
+			proxy_pass http://viacaotranspiaui.embarca.ai;
 			proxy_http_version 1.1;
 			proxy_buffering off;
 		}
